# realtime-streaming-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ENHANCEMENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
config/: config.yaml
consumers/: alert_consumer.py  analytics_consumer.py
docker/: init-db.sql
ml/: anomaly_detector.py
monitoring/grafana/dashboards/: dashboard-provider.yml
monitoring/grafana/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
producers/: ecommerce_producer.py  sensor_producer.py
schemas/: ecommerce_event.avsc  sensor_reading.avsc
tests/: load_test.py  test_integration.py
utils/: database.py  dlq_handler.py  metrics.py
